Add Update doi robot and remove endpoint and job.
closes #5213
